Clean up some Stream collector usage