@@ -5,7 +5,6 @@ import com.tac550.tonewriter.util.TWUtils;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class VerseLine {
 
@@ -26,7 +25,7 @@ public class VerseLine {
 		List<String> new_syllables = new ArrayList<>(Arrays.asList(
 				line.replace("-", "_-").replace(" ", "_ ").split("_")));
 
-		return new_syllables.stream().map(TWUtils::applySmartQuotes).collect(Collectors.toList());
+		return new_syllables.stream().map(TWUtils::applySmartQuotes).toList();
 	}
 
 	public String getLine() {
